--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Emeliov Dmitri",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "coffee-script": "^1.10.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "path": "^0.12.7"
+    "jade": "^1.11.0",
+    "papaparse": "^4.1.2",
+    "path": "^0.12.7",
+    "sleep": "^3.0.0"
   }
 }
